[package]
name = "mina-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = "1.17.0"
#actix-web = "4"
#serde = {version = "1.0", features = ["derive"]}
#serde_json = {version = "1.0"}
#
#diesel = { version = "1.4.4", features = ["mysql"] }
#dotenv = "0.15.0"