[package]
name = "mina-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.17.0", default-features = false, features = ["http-rustls-tls"] }
tokio = { version = "1.17.0", default-features = true, features = ["full"]}
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
dotenv = "0.15.0"